use gatsby ssr to avoid screen flicker on dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,16 +21,7 @@ html, body, #___gatsby, #gatsby-focus-wrapper {
     --accent-colour: #74C8CC;
 }
 
-[data-theme="light"]{
-	--text-colour: #000;
-    --background-colour: #E7E2DF;
-    --primary-card-colour: #FAF7F5;
-    --secondary-card-colour: hsl(26, 18%, 92%);
-    --drop-shadow-card-colour: grey;
-    --accent-colour: #74C8CC;
-}
-
-[data-theme="dark"] {
+:root.dark {
     --text-colour: #f6f6f6e7;
     --background-colour: #0a0a0a;
     --primary-card-colour: #121212c4;
